# multiarch-arduino-cmake

./: CMakeLists.txt  README.rst
cmake/: ArduConfig.cmake  ToolchainESP.cmake
cmake/Platform/: Arduino.cmake
example/: CMakeLists.txt  blinky-main.cpp
